infra/k8s/ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-srv
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
spec:
  rules:
    - host: cloudframe.com
      http:
        paths:
          - path: /api/photos/deleteImage/?(.*)
            pathType: Prefix
            backend:
              service:
                name: images-management-srv
                port:
                  number: 4001
          - path: /api/user-data/?(.*)
            pathType: Prefix
            backend:
              service:
                name: query-service-srv
                port:
                  number: 4005
          - path: /api/auth/signin
            pathType: Prefix
            backend:
              service:
                name: user-account-management-srv
                port:
                  number: 4000
          - path: /api/photos/upload/?(.*)
            pathType: Prefix
            backend:
              service:
                name: images-management-srv
                port:
                  number: 4001
          - path: /api/auth/signup
            pathType: Prefix
            backend:
              service:
                name: user-account-management-srv
                port:
                  number: 4000
          - path: /
            pathType: Prefix
            backend:
              service:
                name: cloudframe-srv
                port:
                  number: 3000
